--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,18 @@
 [workspace]
 resolver = "2"
 members = ["app", "frontend", "server"]
+package.authors = ["AD4MANTIS"]
+package.version = "0.1.0"
+package.edition = "2021"
+
+[workspace.lints.rust]
+unsafe_code = "forbid"
+
+[workspace.lints.clippy]
+enum_glob_use = "forbid"
+# pedantic = "deny"
+nursery = "deny"
+unwrap_used = "deny"
 
 # need to be applied only to wasm build
 [profile.release]
@@ -50,6 +62,7 @@ site-pkg-dir = "pkg"
 
 # [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
 style-file = "style/main.scss"
+tailwind-input-file = "style/main.scss"
 
 # Assets source dir. All files found here will be copied and synchronized to site-root.
 # The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
