--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "app"
-version = "0.1.0"
-edition = "2021"
+authors.workspace = true
+version.workspace = true
+edition.workspace = true
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lints]
+workspace = true
 
 [dependencies]
 leptos.workspace = true
